langtools/test/tools/javac/failover/FailOver04.out
FailOver04.java:11:10: compiler.err.cant.resolve.location: kindname.class, Unknown, , , kindname.class, Test
1 error
